# Algorithm-Solutions

./: .gitignore  CMakeLists.txt  README.md
PAT/: CMakeLists.txt
PAT/Advanced Level/: 1002.cpp  1006.cpp  1009.cpp  1011.cpp  1065.cpp  1100.cpp  1101.cpp  A1002.cpp  A1006.cpp  A1009.cpp  A1011.cpp  A1042.cpp  A1046.cpp  A1065.cpp  A1102.cpp  A1103.cpp  A1106.cpp  A2020Autumn7-1.cpp  CMakeLists.txt
PAT/Basic Level/: 1001 害死人不偿命的(3n+1)猜想.cpp  B1001.cpp  B1011.cpp  CMakeLists.txt
PAT/Note/: A1002 A+B for Polynomials.md  A1042 Shuffling Machine.md  A1046 Shortest Distance.md  A1065 A+B and C (64bit).md  A1100 Mars Numbers.md  A1102 Invert a Binary Tree.md  A1104 Sum of Number Segments.md  A1105 Spiral Matrix.md
PAT/PAT (Advanced Level) Practice/: 1001 A+B Format (20 分).cpp  1002 A+B for Polynomials (25 分).cpp  1003 Emergency (25 分).cpp  1004 Counting Leaves (30 分).cpp  1005 Spell It Right (20 分).cpp  1007 Maximum Subsequence Sum (25 分).cpp  1008 Elevator (20 分).cpp  1009 Product of Polynomials (25 分).cpp  1010 Radix (25 分).cpp  1012 The Best Rank (25 分).cpp  1013 Battle Over Cities (25 分).cpp  1014 Waiting in Line (30 分).cpp  1015 Reversible Primes (20 分).cpp  1016 Phone Bills (25 分).cpp  1017 Queueing at Bank (25 分).cpp  1018 Public Bike Management (30 分).cpp  1019 General Palindromic Number (20 分).cpp  1020 Tree Traversals (25 分).cpp  1021 Deepest Root (25 分).cpp  1022 Digital Library (30 分).cpp  1023 Have Fun with Numbers (20 分).cpp  1024 Palindromic Number (25 分).cpp  1025 PAT Ranking (25 分).cpp  1026 Table Tennis (30 分).cpp  1027 Colors in Mars (20 分).cpp  1028 List Sorting (25 分).cpp  1029 Median (25 分).cpp  1030 Travel Plan (30 分).cpp  1031 Hello World for U (20 分).cpp  1032 Sharing (25 分).cpp  1034 Head of a Gang (30 分).cpp  (+125 more)
(+234 files in other folders)
